{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 146,
  "lineage": "420f0fc9-fe74-f07b-1956-6f9eb8e500d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jd-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-03073b258abf76c9c",
            "id": "igw-03073b258abf76c9c",
            "owner_id": "782863115905",
            "tags": {
              "Name": "terraform-jason-IGW"
            },
            "tags_all": {
              "Name": "terraform-jason-IGW"
            },
            "vpc_id": "vpc-0e00a0034861aadd9"
          },
          "dependencies": [
            "aws_vpc.JD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "JD-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0010e379d85459781",
            "id": "rtb-0010e379d85459781",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03073b258abf76c9c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e00a0034861aadd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jd-igw",
            "aws_vpc.JD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JD-route-table-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d33fd69875c9d0a6",
            "route_table_id": "rtb-0010e379d85459781",
            "subnet_id": "subnet-040d4dad915021c47"
          },
          "dependencies": [
            "aws_internet_gateway.jd-igw",
            "aws_route_table.JD-route-table",
            "aws_subnet.JD-subnet-public",
            "aws_vpc.JD"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f33764588a5b93d",
            "route_table_id": "rtb-0010e379d85459781",
            "subnet_id": "subnet-02fb7bf1438201c48"
          },
          "dependencies": [
            "aws_internet_gateway.jd-igw",
            "aws_route_table.JD-route-table",
            "aws_subnet.JD-subnet-public",
            "aws_vpc.JD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JD-VPC-Main-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-050ccc235d19066c0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050ccc235d19066c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230329175602744300000001",
            "name_prefix": "terraform-",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e00a0034861aadd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.JD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JD-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-040d4dad915021c47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040d4dad915021c47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-jason"
            },
            "tags_all": {
              "Name": "terraform-jason"
            },
            "vpc_id": "vpc-0e00a0034861aadd9"
          },
          "dependencies": [
            "aws_vpc.JD"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-02fb7bf1438201c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fb7bf1438201c48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-jason"
            },
            "tags_all": {
              "Name": "terraform-jason"
            },
            "vpc_id": "vpc-0e00a0034861aadd9"
          },
          "dependencies": [
            "aws_vpc.JD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "JD",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-0e00a0034861aadd9",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0b93f5318c562b524",
            "default_route_table_id": "rtb-01a4a92d504708c46",
            "default_security_group_id": "sg-04e5a0569cde33ac0",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e00a0034861aadd9",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0d611aece2c700607",
            "ipv6_cidr_block": "2600:1f10:4ab4:9600::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a4a92d504708c46",
            "owner_id": "782863115905"
          }
        }
      ]
    }
  ]
}